# equilibrium-inn

./: .env.example  .gitignore  AI_USAGE.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  inn.yaml  pyproject.toml
experiments/: baseline_compare.py  chronicle.py  g0_formal.py  g0_report.py  g0_semantic_sweep.py  g0_sweep.py  g2_parity.py  harvest.py  regen_golden.py  regression.py  report_activity_fatigue.py  report_boredom_activity.py  report_intervention.py  report_lib.py  report_persona_contrast.py  report_rest_sleep_recovery.py  report_scarcity.py
inn/: __init__.py  baseline.py  chronicle.py  cli.py  clock.py  config.py  economy.py  engine_surface.py  inbox.py  intervention.py  live.py  llm_seam.py  loop.py  metrics.py  observatory.py  observe.py  presence.py  scenario.py  schedule.py  session.py  timeplots.py  trace.py  transducer.py  world_state.py
observatory/: BROWSER_QA.md  build_bundle.py  build_site.py  fetch_pyodide.py  landing.html
qa/: __init__.py  qa_report.html  qa_report.md  qa_suite.py
registers/: m_a.yaml  m_b.yaml  m_c.yaml  m_d.yaml  m_e.yaml  m_g_h.yaml  m_i.yaml  m_j.yaml  m_j_timeplots_plan.md  m_k.yaml  qa.yaml
tests/: test_baseline.py  test_cli.py  test_config.py  test_determinism.py  test_g1_contracts.py  test_g2_parity.py  test_harvest.py  test_inbox_economy.py  test_intervention.py  test_intervention_corner.py  test_intervention_frontier.py  test_intervention_polish.py  test_intervention_ui.py  test_llm_seam.py  test_metrics.py  test_observatory.py  test_observe.py  test_playback_js.py  test_profiles.py  test_provocation.py  (+11 more)
(+5 files in other folders)
